sub/89/build.log
Main.cpp:100:19: error: size of array 'ara' is too large
 int ara[1000000000];
                   ^
